# hanium-iot-gateway

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: repo-sync.yml
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  hanium_iot_gateway.cbp
debug/.cmake/api/v1/reply/: cache-v2-83601729267d8d72e339.json  cmakeFiles-v1-a46c0058b196ac4e36c0.json  cmakeFiles-v1-b70bb366118db239af47.json  codemodel-v2-8cb9ddcbf98ccc92354f.json  codemodel-v2-c3a98f65c66efcbc1f55.json  codemodel-v2-c8df4c4efc3e542f78d3.json  codemodel-v2-d2a31974c5d60d8339b1.json  codemodel-v2-e73f37410a40a7144b97.json  directory-.-Debug-93326d4a398c03124bb6.json  directory-.-Debug-a6533797029da084b873.json  directory-.-Debug-cadca43501acc009374a.json  index-2022-04-05T02-40-48-0561.json  index-2022-04-05T08-41-18-0640.json  index-2022-04-05T08-42-44-0235.json  index-2022-04-05T09-17-19-0412.json  index-2022-04-06T06-33-02-0315.json  target-hanium_iot_gateway-Debug-05d9dd285b3e2067102b.json  target-hanium_iot_gateway-Debug-29babaff45d48abb2e73.json  target-hanium_iot_gateway-Debug-7fd7ac05c4caea09c466.json  target-hanium_iot_gateway-Debug-9e27dfe2e48f232eab27.json  target-hanium_iot_gateway-Debug-e37e87f21c2755f6d8fb.json  target-serial-Debug-1adc603782c2a3666801.json  target-serial-Debug-4427a7c3276a3be24b9c.json  target-serial-Debug-917a0831d736710a414f.json  target-serial-Debug-d4b6a650400746c15d53.json  target-serial-Debug-fb2d972a433cd9d57141.json
include/: gateway_manager.h  master_board.h  mqtt_config.h  protocol.h
include/database/: database.h  database_config.h
include/gateway/: gateway_manager.h
include/logger/: logger.h  packet_log.h
include/master/: master_board.h  master_config.h
include/mqtt/: mqtt_config.h  mqtt_manager.h  mqtt_topic.h
include/packet/: base_packet.h  request_packet.h  response_packet.h
include/protocol/: protocol.h
include/util/: util.h
lib/mosquitto/lib/: mosquitto_internal.h
lib/mosquitto/src/: mosquitto_broker_internal.h
lib/sqlite/: sqlite3.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake  hanium_iot_gateway.cbp
release/.cmake/api/v1/reply/: cache-v2-b0bd2c30549da9382eed.json  cmakeFiles-v1-d9e8f9d54d647ca80407.json  codemodel-v2-3d72ae98e704c9376cad.json  directory-.-Release-f9b63e86f61eea5ad1b3.json  index-2022-07-26T08-53-38-0838.json  target-hanium_iot_gateway-Release-7aca962ed57f874c7e08.json  target-serial-Release-d5b46c49b6692b93835b.json  target-sqlite3-Release-f0f007b2e5fe9e62d04b.json
src/: gateway_manager.cpp  main.cpp  master_board.cpp  mqtt_manager.cpp  request_packet.cpp  response_packet.cpp
src/database/: database.cpp
src/gateway/: gateway_manager.cpp
src/logger/: logger.cpp  packet_log.cpp
src/master/: master_board.cpp  master_config.cpp
src/mqtt/: mqtt_manager.cpp  mqtt_topic.cpp
src/packet/: request_packet.cpp  response_packet.cpp
